# gitea2rss

./: .clang-format  .drone.yml  CMakeLists.txt  README.adoc  build_manpage.sh  gitea2rss.1.adoc  tests.CMakeLists.txt
cmake/: debug_flags.cmake
config/: nginx-example.conf
doc/: nginx-example.conf
man/: CMakeLists.txt  build_manpage.sh  gitea2rss.1.adoc
src/: CMakeLists.txt  commits.cpp  gitea2rss.cpp  gitea2rss.hpp  http.cpp  main.cpp  release.cpp  releases.cpp  strings.cpp  tags.cpp  time.cpp  version.hpp.in  write.cpp
tests/: CMakeLists.txt  main.cpp  test_escape_some_html.cpp  test_get_baseurl.cpp  test_get_domain.cpp  test_get_http.cpp  test_get_project.cpp  test_get_repo.cpp  test_strtime.cpp
